buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.owasp:dependency-check-gradle:9.0.9'
    }
}

plugins {
    id "io.spring.dependency-management" version '1.1.0'
    id "de.undercouch.download" version '5.1.0'
    id "com.github.spotbugs" version '5.0.14' apply false
    // id 'deltix.gradle.plugins.velocity' version '1.3.0' apply false TODO: investigate
    id 'deltix.gradle.plugin.gitlab-release' version '1.0.11'
}

group 'deltix.qsrv'

// To enable JavaDoc generation add Gradle property to command line:
// -PincludeJavaDocs
def includeJavaDocs = hasProperty("includeJavaDocs")

// Spotbugs
def enableSpotbugs = hasProperty("spotbugs") || Boolean.getBoolean("spotbugs") || Boolean.parseBoolean(System.getenv('SPOTBUGS'))
if (enableSpotbugs) {
    println("Spotbugs is ENABLED")
}

ext {
    publisherUser = findProperty('ARTIFACTORY_USER') ?: System.getenv('ARTIFACTORY_USER') ?: "FakeUser"
    publisherPassword = findProperty('ARTIFACTORY_PASS') ?: System.getenv('ARTIFACTORY_PASS') ?: "FakePassword"

    vendor = 'Deltix Inc.'
    testTags = null // Default test tags

    // We don't want to apply plugins and build artifacts for non-leaf (grouping) projects.
    // So we create a list of leaf projects and apply all java-related plugins on them only.
    leafProjects = subprojects.findAll { subproject ->
        subproject.subprojects.empty
    }
}

// Provides rootProject.ext.getVersionFromProperties() that is used by promotion script
apply from: "$rootDir/gradle/Release.gradle"
apply from: 'promotion.gradle'

configure(leafProjects) {
    apply from: "$rootDir/gradle/Deltix.gradle"
    apply plugin: 'java'
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: "com.github.spotbugs" // Static analysis
    apply plugin: 'io.spring.dependency-management'

    // --- JAVA 11 version ---
    //--add-exports <module>/<module>/<package>=<target-module>(,<target-module>)*

    compileJava {
        options.warnings = true
        options.deprecation = false
        options.encoding = 'UTF-8'
        options.compilerArgs += ["--add-exports=java.base/sun.nio.ch=ALL-UNNAMED", "--add-exports=java.base/sun.nio=ALL-UNNAMED"]
    }
    java {
        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
    }

    // Defines versions of dependencies to be used by subprojects
    dependencyManagement {
        dependencies {
            dependency 'deltix:deltix-thread-affinity:1.0.3'
            dependency 'org.apache.commons:commons-lang3:3.4'
            dependency 'org.apache.commons:commons-compress:1.26.1'
            dependency 'commons-collections:commons-collections:3.2.2'
            dependency 'javax.mail:mail:1.4.7'
            dependency 'com.google.code.findbugs:jsr305:3.0.2'
            dependency 'com.google.code.findbugs:annotations:3.0.1'

            dependency 'org.jetbrains:annotations:24.1.0'

            dependency "com.epam.deltix:dfp:$dfpVersion"
            dependency "com.epam.deltix:hd-date-time:$hdTimeVersion"
            dependency "deltix:deltix-clock:1.0.6"


            dependencySet (group: 'com.epam.deltix', version: '3.0.2') {
                entry 'gflog-api'
                entry 'gflog-core'
                entry 'gflog-jul'
                entry 'gflog-dcl'
                entry 'gflog-slf4j'
            }

            dependencySet(group: 'com.jidesoft', version: '3.7.8') {
                entry 'deltix-jide-components'
                entry 'deltix-jide-dialogs'
                entry 'deltix-jide-action'
                entry 'deltix-jide-dock'
                entry 'deltix-jide-grids'
            }

            // JMH
            dependencySet(group: 'org.openjdk.jmh', version: '1.19') {
                entry 'jmh-core'
                entry 'jmh-generator-annprocess'
            }

            dependency "junit:junit:4.13.2"
            dependency "org.mockito:mockito-core:4.6.1"

            dependencySet (group: 'org.junit.jupiter', version: '5.8.2') {
                entry 'junit-jupiter-api'
                entry 'junit-jupiter-engine'
            }
            dependencySet (group: 'org.junit.vintage', version: '5.8.2') {
                entry 'junit-vintage-engine'
            }

            dependency 'com.google.guava:guava:32.0.1-jre'

            dependency 'org.hdrhistogram:HdrHistogram:2.1.12'
        }
    }

    group 'deltix.qsrv'
    archivesBaseName = 'deltix-commons' + project.path.replaceAll(':', '-')

    repositories {
        mavenDeltixProxy("DevMain")
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305'
        compileOnly 'com.google.code.findbugs:annotations'

        testCompileOnly 'junit:junit'

        testImplementation "org.mockito:mockito-core"

        testImplementation 'org.junit.jupiter:junit-jupiter-api'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'

        testRuntimeOnly 'com.epam.deltix:gflog-core'

        spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.9.0'
    }

    test {
        useJUnitPlatform {
            if (testTags != null) {
                setIncludeTags testTags.split(',') as Set
            }
        }

        jvmArgs '-Dgflog.sync=true', '-Dgflog.console.appender.wrap=true' // sync logging to not mix up messages from different tests
    }

    spotbugs {
        toolVersion = "4.7.3"
        effort = "max"
        reportLevel = "medium"
        excludeFilter = rootProject.file('spotbugs-excludes.xml')
    }
    spotbugsTest.enabled = false // disable SpotBugs for tests

    tasks.withType(com.github.spotbugs.snom.SpotBugsTask) {
        enabled = enableSpotbugs

        reports {
            xml.required = false
            html.required = true
        }
    }

    jar {
        manifest {
            archiveBaseName.set(archivesBaseName)
            attributes 'Manifest-Version': "1.0",
                    'Created-By': vendor,
                    'Implementation-Title': "QuantServer Commons",
                    'Implementation-Vendor': vendor,
                    'Implementation-Version': project.version
        }
    }

    processResources {
        from sourceSets.main.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    processTestResources {
        from sourceSets.test.java.srcDirs
        exclude '**/*.java'
        includeEmptyDirs = false
    }

    afterEvaluate {
        // populate project classpath after evaluating
        jar.manifest.attributes 'Class-Path': configurations.runtimeClasspath.collect { it.getName() }.join(' ')
    }

    // Contains current project jar and all required dependencies for that project
    def allJarsPath = 'build/alljars'

    task gatherProjectDependencies(type: Sync) {
        description 'Copies all project runtime dependencies to ' + allJarsPath
        from project.configurations.runtimeClasspath
        into allJarsPath
    }

    task gatherAllJarsWithDependencies(type: Copy, dependsOn: ['jar', gatherProjectDependencies]) {
        group "build"
        description 'Copies all project JAR and all its runtime dependencies to ' + allJarsPath
        from jar // Main produced JAR of the subproject
        into allJarsPath
    }

    def allTestJarsPath = 'build/alltestjars'

    task gatherProjectTestDependencies(type: Sync) {
        description 'Copies all project test dependencies to ' + allTestJarsPath
        from project.configurations.testRuntimeClasspath
        into allTestJarsPath
    }

    task generateTestJar(type: Jar) {
        description 'Generates JAR with test classes'
        archiveClassifier = 'tests'
        from sourceSets.test.output
    }

    task gatherAllTestJarsWithDependencies(type: Copy, dependsOn: ['jar', generateTestJar, gatherProjectTestDependencies]) {
        group "build"
        description 'Copies all project JAR and all it\'s test dependencies to ' + allTestJarsPath
        from jar // Main produced JAR of the subproject
        from generateTestJar // JAR with test classes

        into allTestJarsPath
    }

    /// Support for publishing -sources.jar and -javadoc.jar artifacts:

    task sourcesJar(type: Jar, dependsOn: classes) {
        archiveClassifier.set('sources')
        archiveBaseName.set(archivesBaseName)
        from sourceSets.main.allSource
    }

    task javadocJar(type: Jar, dependsOn: javadoc) {
        enabled = includeJavaDocs
        archiveClassifier.set('javadoc')
        archiveBaseName.set(archivesBaseName)
        from javadoc.destinationDir
    }

    tasks.withType(Javadoc) {
        options.addStringOption('Xdoclint:all,-reference', '-quiet') //  disables fail on missing JavaDoc reference
        //options.addStringOption('Xdoclint:none', '-quiet') // suppress all warnings
    }

    artifacts {
        archives sourcesJar
        if (includeJavaDocs) {
            archives javadocJar
        }
    }

    // Publishing
    publishing {
        repositories {
            maven {
                url javaPublicationUrl
                credentials {
                    username publisherUser
                    password publisherPassword
                }
            }
        }

        publications {
            // https://github.com/gradle/gradle/issues/11862
            // https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/262
            mavenJava(MavenPublication) {
                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }

                from components.java
                if (includeJavaDocs) {
                    artifact javadocJar
                }
                artifact sourcesJar
                artifactId = archivesBaseName
            }
        }
    }

    if (!includeJavaDocs) {
        tasks.withType(Javadoc).all { enabled = false }
    }

}

allprojects {
    // See http://jeremylong.github.io/DependencyCheck/dependency-check-gradle
    apply plugin: 'org.owasp.dependencycheck'

    dependencyCheck {
        // skipProjects = nonJavaProjects
        failBuildOnCVSS = 7
        suppressionFile = file("$rootDir/dependency-check-suppression-file.xml")
        analyzers {
            assemblyEnabled = false
        }

        scanConfigurations = ["runtimeClasspath", "compileClasspath"]

        nvd {
            apiKey = findProperty('NVD_API_KEY') ?: System.getenv('NVD_API_KEY')
        }
    }
}

def testTasks = ext.leafProjects*.test

task generateTestReport(type: TestReport) {
    group 'verification'
    reportOn testTasks
    destinationDirectory.set(file("$rootDir/build/reports/junit/html/all_reports_merged")) // TODO: Pick better name for merged report
}

gitlabRelease {
    distributionUrl = project.publishRepositoryUrl
    assets.add('https://nexus.deltixhub.com/repository/DevMain')

    msteams {
        projectName = "QuantServer Commons"
        color = "1B567B"
    }
}

